laborations/lab1/testsuite/bad/bad013.cc
inline foo(double x) {
	return x + 9;
}
